<resources>
    <string name="app_name">AlexRosh</string>
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="back_button_description">Назад</string>
    <string name="main_title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="favorite_tracks_title">Избранные треки</string>
    <string name="favorite_tracks_empty_message">Ваша медиатека пуста</string>
    <string name="main_settings">Настройка</string>

    <string name="share_message">Я использую приложение Рощупкина Алексея ИС-221</string>
    <string name="support_email">AlexseyRoshupkin@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам Playlist Maker</string>
    <string name="support_body">Работает!!</string>
    <string name="agreement_url">https://vivt.ru/</string>
    <string name="clear_search_query">Очистить поисковый запрос</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_problems">Проблемы со связью</string>
    <string name="connection_problems_message">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="audio_player_cover_description">Обложка трека</string>
    <string name="audio_player_add_to_playlist">Добавить в плейлист</string>
    <string name="audio_player_play">Играть</string>
    <string name="audio_player_like">Нравится</string>
    <string name="audio_player_duration_label">Длительность</string>
    <string name="audio_player_year_label">Год</string>
    <string name="audio_player_genre_label">Жанр</string>
    <string name="audio_player_country_label">Страна</string>
    <string name="audio_player_album_label">Альбом</string>
    <string name="audio_player_add_to_playlist_icon_description">Добавить в плейлист</string>
    <string name="audio_player_play_icon_description">Воспроизвести</string>
    <string name="audio_player_like_icon_description">Лайк</string>
    <string name="audio_player_current_time_default">00:00</string>
    <string name="library_playlists_tab">Плейлисты</string>
    <string name="library_new_playlist">Новый плейлист</string>
    <string name="library_empty_playlists_message">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist_title">Новый плейлист</string>
    <string name="new_playlist_name_hint">Название</string>
    <string name="new_playlist_description_hint">Описание</string>
    <string name="new_playlist_cover_hint">Добавить обложку</string>
    <string name="new_playlist_create_button">Создать</string>
    <string name="new_playlist_finish_creation_title">Завершить создание?</string>
    <string name="new_playlist_finish_creation_positive">Завершить</string>
    <string name="new_playlist_finish_creation_negative">Отмена</string>
    <string name="new_playlist_created">Плейлист %1$s создан</string>
    <string name="playlist_tracks_count_single">%1$d трек</string>
    <string name="playlist_tracks_count_few">%1$d трека</string>
    <string name="playlist_tracks_count_many">%1$d треков</string>
    <string name="audio_player_bottom_sheet_title">Добавить в плейлист</string>
    <string name="playlist_track_added">Добавлено в плейлист %1$s</string>
    <string name="playlist_track_already_added">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_cover_content_description">Обложка плейлиста</string>
</resources>